--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
   <!--Contact Form-->
   
   <form action="#" method="post">
-    <label></label>
+    <label>Name</label>
+    <input type="text" name=
     
   </form>
   
