--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label>Email</label>
-    <input type="email" name="email" placeholder="your email" required>
+    <input for="email"type="email" name="email" placeholder="your email" required>
     
   </form>
   
