--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
   <form action="#" method="post">
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
-    <label>Email</label>
-    <input for="email"type="email" name="email" placeholder="your email" required>
+    <label for="email">Email</label>
+    <input type="email" name="email" placeholder="your email" required>
     
   </form>
   
