automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label for="email">Email</label>
     <input type="email" name="email" placeholder="your email" required>
+    <label for="phone">Mobile number</label>
+    <input type="phone" name="phone" placeholder="your mobile numebr (Optional)">
     
   </form>
   
