automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
     <input type="email" name="email" placeholder="your email" required>
     <label for="phone">Mobile number</label>
     <input type="phone" name="phone" placeholder="your mobile numebr (Optional)">
+    <label for="message">Message</label>
     
   </form>
   
