--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
     <label for="phone">Mobile number</label>
     <input type="phone" name="phone" placeholder="your mobile numebr (Optional)">
     <label for="message">Message</label>
+    <textarea></textarea>
     
   </form>
   
