automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <label for="phone">Mobile number</label>
     <input type="phone" name="phone" placeholder="your mobile numebr (Optional)">
     <label for="message">Message</label>
-    <textarea id="message" name="message"></textarea>
+    <textarea id="message" name="message" rows=10 ></textarea>
     
   </form>
   
