--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <input type="phone" name="phone" placeholder="your mobile numebr (Optional)">
     <label for="message">Message</label>
     <textarea id="message" name="message" rows="10" ></textarea>
-    <input type 
+    <input type="submit" value="send">
     
   </form>
   
